# jai

./: .gitignore  CMakeLists.txt  README.md  run_example
.github/workflows/: ci.yml
examples/: README.md  compile_time_compute.jai  conditionals.jai  escape_member.jai  extern_raylib.jai  fibonacci.jai  for_it_only.jai  for_member.jai  for_member_foo.jai  for_member_nospace.jai  function_calls.jai  hello.jai  load_test.jai  loaded.jai  mini.jai  multi_file.jai  nested.jai  reflection.jai  run_print.jai  simple_var.jai  srgb_minimal.jai  srgb_run.jai  struct_and_enum.jai  sum_simple.jai  switch_like.jai
src/: ast.hpp  ast_dump.cpp  ast_dump.hpp  build_config.cpp  build_config.hpp  bytecode.hpp  codegen.cpp  codegen.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp  types.cpp  types.hpp
tests/: README.md  test_integration.cpp  test_lexer.cpp  test_parser.cpp  test_sema.cpp
